email sendor bug is fixed

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 MONGODB_URI=mongodb+srv://hudavkd1:hudanawrin@cluster0.6jjjf37.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 EMAIL_USER=hudavkd1@gmail.com 
-EMAIL_PASS=oytk jalq tglq ttse
+EMAIL_PASS=holc qlxh rucq dogb
 
 
 PORT=4000
